Examples/test-suite/errors/c_enum_badvalue.i
%module xxx

enum stuff {
   FOO = 'x',
   BAR = 3.14159,
   BADBIN = 0b121,
   BADOCTAL = 018118055
};

